--- a/pom.xml
+++ b/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
+	<!-- プロジェクト定義 -->
 	<groupId>jp.gr.java_conf.mahny.sanvitalia</groupId>
 	<artifactId>sanvitalia</artifactId>
 	<version>0.0.1</version>
 	<packaging>pom</packaging>
 
 	<name>sanvitalia</name>
-	<url>http://maven.apache.org</url>
+	<url>https://github.com/mahny-b/sanvitalia</url>
+	<description>Webアプリを作る時のテンプレプロジェクト</description>
 
+	<!-- プロパティ -->
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -31,11 +32,13 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>[4.12,5.0)</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
 	<!-- サブプロジェクト -->
 	<modules>
 		<module>sanvitalia-server</module>
-	</modules>
+    <module>sanvitalia-commons</module>
+  </modules>
 </project>
