--- a/sanvitalia-server/pom.xml
+++ b/sanvitalia-server/pom.xml
@@ -15,10 +15,14 @@
 	<!-- プロジェクト定義 -->
 	<groupId>jp.gr.java_conf.mahny.sanvitalia.sanvitalia_server</groupId>
 	<artifactId>sanvitalia-server</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<packaging>war</packaging>
 	<name>sanvitalia-server Maven Webapp</name>
-	<url>http://maven.apache.org</url>
+	<url>https://github.com/mahny-b/sanvitalia</url>
+
+	<!-- プロパティ -->
+	<properties>
+	</properties>
 
 	<!-- 依存関係 -->
 	<dependencies>
@@ -27,5 +31,18 @@
 	<!-- ビルド設定 -->
 	<build>
 		<finalName>sanvitalia-server</finalName>
+		<plugins>
+			<!-- https://mvnrepository.com/artifact/org.apache.tomcat.maven/tomcat7-maven-plugin -->
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<path>/sanvitalia</path>
+					<url>http://localhost:8080/sanvitalia</url>
+					<charset>UTF-8</charset>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
