--- a/sanvitalia-server/.project
+++ b/sanvitalia-server/.project
@@ -2,7 +2,9 @@
 <projectDescription>
   <name>sanvitalia-server</name>
   <comment>Webアプリを作る時のテンプレプロジェクト. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects/>
+  <projects>
+    <project>sanvitalia-commons</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
