--- a/sanvitalia-server/pom.xml
+++ b/sanvitalia-server/pom.xml
@@ -26,6 +26,18 @@
 
 	<!-- 依存関係 -->
 	<dependencies>
+		<dependency>
+			<groupId>jp.gr.java_conf.mahny.sanvitalia.sanvitalia_commons</groupId>
+			<artifactId>sanvitalia-commons</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>[1.7.21,1.8)</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<!-- ビルド設定 -->
