--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 	<dependencies>
 
 		<!-- 同梱するもの -->
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>[1.7.21,2.0)</version>
+		</dependency>
 
 		<!-- ローカル開発環境のみパスを通すもの -->
 
