--- a/sanvitalia-commons/pom.xml
+++ b/sanvitalia-commons/pom.xml
@@ -15,11 +15,44 @@
 	<!-- プロジェクト定義 -->
 	<groupId>jp.gr.java_conf.mahny.sanvitalia.sanvitalia_commons</groupId>
 	<artifactId>sanvitalia-commons</artifactId>
-	<version>-DinteractiveMode=false</version>
+	<version>0.0.1</version>
 	<packaging>jar</packaging>
 	<name>sanvitalia-commons</name>
 	<url>https://github.com/mahny-b/sanvitalia</url>
 
+	<!-- プロパティ -->
+	<properties>
+		<app.name>sanvitalia-commons</app.name>
+	</properties>
+
+	<!-- 依存関係 -->
 	<dependencies>
 	</dependencies>
+
+	<!-- ビルド設定 -->
+	<build>
+		<finalName>${app.name}</finalName>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
+		<testResources>
+			<testResource>
+				<directory>test/main/java</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
+			</testResource>
+			<testResource>
+				<directory>test/main/resources</directory>
+			</testResource>
+		</testResources>
+	</build>
 </project>
